Fixed strange <!-- error on IE7. Also grabbed a bunch of other smaller changes.
Can't remember what the other changes are. Need to get back to Brazil and prodoc...

--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -32,14 +32,15 @@ div#bar	{
 	width: 100%;
 	margin-left: auto ;
   	margin-right: auto ;
- 	margin-top: 50px;
+ 	margin-top: 150px;
 	}
 
 .inputblock {
 	
-	width:650px;
+	width:685px;
 	line-height: 18px;
-    margin-left: auto ;
+	margin-bottom:117px;    
+	margin-left: auto ;
   	margin-right: auto ;
     font-size: 26px;
 }
@@ -73,7 +74,7 @@ input#term
 
 input#go_button
 {
-  	/*vertical-align: middle;*/
+/*  	vertical-align: middle;*/
     padding-bottom: 5px;
 	float: right;
 /*	width: 130px;*/
@@ -92,6 +93,7 @@ pre {
 a { 
 	color: #d0d0d0; 
 	text-decoration: none;
+	font-size: 12px;
 	}
 a:visited { color: #666; }
 a:hover { color: #fff; background-color:#000; }
